--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
+/public/images/
+/public/upload_dir/
+/public/uploads/
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
