Базовые классы для новостей добавлены

--- a/config/packages/easy_admin/entities/OrgNews.yaml
+++ b/config/packages/easy_admin/entities/OrgNews.yaml
@@ -16,6 +16,7 @@ easy_admin:
               label: 'Новости'
               list:
                   fields:
+                      - { property: 'id', label : 'id' }
                       - { property: 'title', label : 'Заголовок' }
                       - { property: 'author_id', label : 'Автор' }
                       - { property: 'publish_date', type: 'datetime', label : 'Дата публикации' }
